# sysrepodevcont

./: .clang-format  .clang-tidy  .gitmodules  .venv  docker-compose.yml  install-yangs.sh  install.sh  sysrepo_manager.sh  yang  yang-analysis
.devcontainer/: devcontainer.json
devmachine/: Dockerfile
ncclient-ismail/: ismail.py
src/: CMakeLists.txt  main.cpp
src/yang-sample/: example-module.yang
srcismail/: CMakeLists.txt  main.cpp
srcismail/include/: sysrepo_manager.h
srcismail/src/: main.cpp  sysrepo_manager.cpp
srcismail/yang/: ismailemre.yang  ismailemre@2025-02-01.yang
sysrepo_project/: CMakeLists.txt  config.xml  main.cpp  network-config.yang  network-config@2026-01-01.yang
